# black-gl-code-quality

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
src/black_gl_code_quality/: __init__.py  __main__.py  error.py  parser.py
